Fix spacing of menu items.

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -1088,8 +1088,7 @@ form {
                 a, a:visited {
                     float: left;
                     margin: 0;
-                    min-width: 40px;
-                    padding: 47px @spacer-large @spacer-medium;
+                    padding: 47px @spacer-xlarge @spacer-medium;
                     text-align: center;
                     text-transform: lowercase;}
                 a:hover, a:active {
